image size+name

--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -34,6 +34,11 @@ body.home .app-content {
   }
 }
 
+body.home .app-content .list-speaker__photo {
+  max-width:320px;
+  margin-top:1rem;
+}
+
 body.home .sponsors {
     
   .list-sponsor {
