--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -26,6 +26,7 @@
 
         <section class="speaker-lineup">
           <h2 class="speaker-lineup__heading">Opening Keynote Speaker</h2>
+          <div class="list-speaker__name">Johnny Appleseed</div>
           <img class="list-speaker__photo" src="/images/speakers/opening-speaker.jpg" alt="NAME" />
         </section>
 
