--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -34,7 +34,7 @@ body.home .app-content {
   }
 }
 
-body.home .app-content .list-speaker__photo {
+body.home .app-hero .list-speaker__photo {
   max-width:320px;
   margin-top:1rem;
 }
