--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -26,8 +26,8 @@
 
         <section class="speaker-lineup">
           <h2 class="speaker-lineup__heading">Opening Keynote Speaker</h2>
-          <div class="list-speaker__name">Johnny Appleseed</div>
-          <img class="list-speaker__photo" src="/images/speakers/opening-speaker.jpg" alt="NAME" />
+          <div class="list-speaker__name">Yukihiro "Matz" Matsumoto</div>
+          <img class="list-speaker__photo" src="/images/speakers/opening-speaker.jpg" alt="Matz" />
         </section>
 
         <div class="app-hero__mailing-list">
