placeholder for opening speaker (#285)
* placeholder for opening spaker

* image size+name

* name

* style fix

* MATZ

--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -24,6 +24,12 @@
         <small class="app-hero__subheading">Novotel Sukhumvit 20 – Bangkok, Thailand</small>
         <div class="app-hero__heading display-1">October 6-7, 2023</div>
 
+        <section class="speaker-lineup">
+          <h2 class="speaker-lineup__heading">Opening Keynote Speaker</h2>
+          <div class="list-speaker__name">Yukihiro "Matz" Matsumoto</div>
+          <img class="list-speaker__photo" src="/images/speakers/opening-speaker.jpg" alt="Matz" />
+        </section>
+
         <div class="app-hero__mailing-list">
           <p class="app-hero__text">Sign up to receive updates about the speakers, venue, and ticket sales</p>
           {% render "form_mailing_list" %}
