--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -25,9 +25,15 @@
         <div class="app-hero__heading display-1">October 6-7, 2023</div>
 
         <section class="speaker-lineup">
-          <h2 class="speaker-lineup__heading">Opening Keynote Speaker</h2>
-          <div class="list-speaker__name">Yukihiro "Matz" Matsumoto</div>
-          <img class="list-speaker__photo" src="/images/speakers/opening-speaker.jpg" alt="Matz" />
+          <h2 class="speaker-lineup__heading">Featured Keynote Speakers</h2>
+          <div class="list-speaker">
+            <div class="list-speaker__name">Yukihiro "Matz" Matsumoto</div>
+            <img class="list-speaker__photo" src="/images/speakers/matz.jpg" alt="Matz" />
+          </div>
+          <div class="list-speaker">
+            <div class="list-speaker__name">Bernard Banta</div>
+            <img class="list-speaker__photo" src="/images/speakers/banta.jpg" alt="Bernard Banta" />
+          </div>
         </section>
 
         <div class="app-hero__mailing-list">
