--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -27,12 +27,14 @@
         <section class="speaker-lineup">
           <h2 class="speaker-lineup__heading">Featured Keynote Speakers</h2>
           <div class="list-speaker">
-            <div class="list-speaker__name">Yukihiro "Matz" Matsumoto</div>
-            <img class="list-speaker__photo" src="/images/speakers/matz.jpg" alt="Matz" />
-          </div>
-          <div class="list-speaker">
-            <div class="list-speaker__name">Bernard Banta</div>
-            <img class="list-speaker__photo" src="/images/speakers/banta.jpg" alt="Bernard Banta" />
+            <div class="list-speaker__individual">
+              <div class="list-speaker__name">Yukihiro "Matz" Matsumoto</div>
+              <img class="list-speaker__photo" src="/images/speakers/matz.jpg" alt="Matz" />
+            </div>
+            <div class="list-speaker__individual">
+              <div class="list-speaker__name">Bernard Banta</div>
+              <img class="list-speaker__photo" src="/images/speakers/banta.jpg" alt="Bernard Banta" />
+            </div>
           </div>
         </section>
 
