Move speakers outside of the hero section

--- a/src/_components/list_speaker.liquid
+++ b/src/_components/list_speaker.liquid
@@ -2,7 +2,7 @@
   {% for speaker in speakers %}
   <li class="list-speaker__individual" id="{{ speaker.id }}">
     <a href="/speakers#{{ speaker.id }}" target="_blank" class="list-sponsor__link">
-      <img class="list-speaker__photo" src="{{ speaker.photo_url }}" alt="{{ speaker.first_name }} {{ speaker.last_name }}" />
+      <img class="list-speaker__photo" src="{{ speaker.photo_url }}" alt="{{ speaker.first_name | smartify }} {{ speaker.last_name | smartify }}" />
     </a>
     <div class="list-speaker__name text-branded">
       <span>{{ speaker.first_name }}</span>&nbsp;{{ speaker.last_name }}
