--- a/frontend/stylesheets/components/_list-speaker.scss
+++ b/frontend/stylesheets/components/_list-speaker.scss
@@ -9,7 +9,7 @@
   text-align: center;
 
   @include media-breakpoint-up('sm') {
-    grid-template-columns: repeat(2, 1fr); //only 2 keynote speakers for now
+    grid-template-columns: repeat(4, 1fr);
   }
 
   &__individual {
