--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -21,11 +21,11 @@
 
     <div class="app-hero">
       <div class="container">
-        <small class="app-hero__subheading">Novotel Sukhumvit 20 – Bangkok, Thailand</small>
+        <small class="app-hero__subheading">Novotel Sukhumvit 20 - Bangkok, Thailand</small>
         <div class="app-hero__heading display-1">October 6-7, 2023</div>
 
         <div class="app-hero__mailing-list">
-          <p class="app-hero__text">Sign up to receive updates about the speakers, venue, and ticket sales</p>
+          <p class="app-hero__text">Sign up to receive updates about the speakers and ticket sales</p>
           {% render "form_mailing_list" %}
         </div>
       </div>
