Update button style (no black border)

--- a/frontend/stylesheets/components/_btn.scss
+++ b/frontend/stylesheets/components/_btn.scss
@@ -13,7 +13,7 @@
     &:not(:disabled):not(.disabled):active:focus {
       --bs-btn-hover-border-color: map-get($color-gray, 'primary');
 
-      border: 2px solid map-get($color-gray, 'primary');
+      border: 2px solid map-get($color-brand, 'primary');
       border-radius: var(--bs-border-radius-lg);
       box-shadow: none;
     }
