remove nsbp causing awkward breaking

--- a/src/_components/card_talk.liquid
+++ b/src/_components/card_talk.liquid
@@ -26,7 +26,7 @@
     {% endif %}
     <div class="card-talk__info">
       <a href="/speakers#{{ speaker.id }}" class="card-talk__name text-branded">
-        <span>{{ speaker.first_name }}</span>&nbsp;{{ speaker.last_name }}
+        <span>{{ speaker.first_name }}</span> {{ speaker.last_name }}
       </a>
       {% if speaker.twitter_handle %}
       <div class="card-talk__social">
