--- a/src/_components/list_speaker.liquid
+++ b/src/_components/list_speaker.liquid
@@ -5,7 +5,7 @@
       <img class="list-speaker__photo" src="{{ speaker.photo_url }}" alt="{{ speaker.first_name | smartify }} {{ speaker.last_name | smartify }}" />
     </a>
     <div class="list-speaker__name text-branded">
-      <span>{{ speaker.first_name }}</span>&nbsp;{{ speaker.last_name }}
+      <span>{{ speaker.first_name }}</span> {{ speaker.last_name }}
     </div>
     {% if with_info == true %}
     <div class="list-speaker__info">
