increase 4 col breakpoint

--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -63,7 +63,7 @@ body.home .app-content {
 body.home .speaker-lineup {
 
   .list-speaker {
-    @include media-breakpoint-up('sm') {
+    @include media-breakpoint-up('md') {
       grid-template-columns: repeat(4, 1fr);
     }
 
