--- a/src/_components/list_speaker.liquid
+++ b/src/_components/list_speaker.liquid
@@ -20,11 +20,11 @@
       <p class="list-speaker__bio">{{ speaker.bio }}</p>
     </div>
     {% else %}
-    {% if speaker.mini_bio %}
-    <div class="list-speaker__minibio">
-      {{ speaker.mini_bio }}
-    </div>
-    {% endif %}
+      {% if speaker.mini_bio %}
+      <small class="list-speaker__bio list-speaker__bio--mini">
+        {{ speaker.mini_bio }}
+      </small>
+      {% endif %}
     {% endif %}
   </li>
   {% endfor %}
