change domain for analytics

--- a/src/_components/analytics.liquid
+++ b/src/_components/analytics.liquid
@@ -1,1 +1,1 @@
-<script src="https://fs.rubyconfth.com/script.js" data-site="FOCVQRVQ" defer></script>
+<script src="https://cdn.usefathom.com/script.js" data-site="FOCVQRVQ" defer></script>
