--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -23,7 +23,7 @@
     width: 100%;
     max-height: 100px;
     @include media-breakpoint-up('sm') {
-      margin-top: 150px;
+      max-height: 150px;
     }
   }
 
