--- a/src/_components/list_speaker.liquid
+++ b/src/_components/list_speaker.liquid
@@ -9,8 +9,9 @@
     </div>
     {% if with_info == true %}
     <div class="list-speaker__info">
-      {% if speaker.social_url %}
+      {% if speaker.social_url || speaker.website %}
       <div class="list-speaker__social">
+        {% if speaker.social_url %}
         <a class="list-speaker__social-link" target="_blank" href="{{ speaker.social_url }}">
           {% if speaker.social_type == "twitter" %}
           {% render "icon", icon: "icon-twitter", class: "list-speaker__social-icon" %}
@@ -18,6 +19,12 @@
           {% render "icon", icon: "icon-mastodon", class: "list-speaker__social-icon" %}
           {% endif %}
         </a>
+        {% endif %}
+        {% if speaker.website %}
+        <a class="list-speaker__social-link" target="_blank" href="{{ speaker.website }}">
+          {% render "icon", icon: "icon-website", class: "list-speaker__social-icon" %}
+        </a>
+        {% endif %}
       </div>
       {% endif %}
       <p class="list-speaker__bio">{{ speaker.bio }}</p>
