--- a/frontend/stylesheets/components/_app-navigation.scss
+++ b/frontend/stylesheets/components/_app-navigation.scss
@@ -28,9 +28,12 @@
       flex-direction: row;
       align-items: center;
       justify-content: end;
-      gap: var(--bs-gutter-x);
-
+      gap: 0;
       padding-top: 0;
+    }
+
+    @include media-breakpoint-up('xxl') {
+      gap: var(--bs-gutter-x);
     }
   }
 
@@ -55,7 +58,7 @@
 
     @include media-breakpoint-up('xl') {
       display: block;
-      padding: 0 1rem;
+      padding: 0 0.75rem;
 
       height: auto;
     }
@@ -88,7 +91,7 @@
   &__link:hover::before {
     width: 100%;
     height: 100%;
-    
+
     @include media-breakpoint-up('xl') {
       opacity: 1;
     }
