--- a/frontend/stylesheets/screens/_speakerfaq.scss
+++ b/frontend/stylesheets/screens/_speakerfaq.scss
@@ -3,8 +3,21 @@
 body.speakerfaq {
     .app-content {
         h2 {
+            margin-top: 2.5rem;
             margin-bottom: 1.5rem;
             border-bottom: 1px map-get(variables.$color-brand, 'primary') solid;
+        }
+
+        ul li {
+            list-style-type: disc;
+        }
+
+        img {
+            width: 300px;
+        }
+
+        ul li li {
+            list-style-type: circle;
         }
     }
 }
