--- a/frontend/stylesheets/screens/_speakerfaq.scss
+++ b/frontend/stylesheets/screens/_speakerfaq.scss
@@ -15,5 +15,9 @@ body.speakerfaq {
         ul li li {
             list-style-type: circle;
         }
+
+        img {
+            margin-top: 1.5rem;
+        }
     }
 }
