--- a/frontend/stylesheets/components/_app-hero.scss
+++ b/frontend/stylesheets/components/_app-hero.scss
@@ -13,6 +13,18 @@
     font-size: map-get($font-sizes, 'lg');
   }
 
+  &__message {
+    margin-block: 0.75rem 0;
+
+    color: $white;
+    background-color: $primary;
+
+    @include media-breakpoint-up(md) {
+      align-self: flex-start;
+      margin-top: 1.5rem;
+    }
+  }
+
   &,
   a {
     color: $white;
