--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -23,10 +23,7 @@
       <div class="container">
         <div class="app-hero__heading display-3"><span class="app-hero__text">October 6-7, 2023</span></div>
         <small class="app-hero__subheading"><span class="app-hero__text">Novotel Sukhumvit 20 - Bangkok, Thailand</span></small>
-
-        <a href="https://www.eventpop.me/e/15095/rubyconfth-2023" target="_blank" class="btn btn--primary app-hero__action">
-          Buy Tickets {% render "icon", icon: "icon-arrow-right-circle" %}
-        </a>
+        <p class="app-hero__message display-4">Thank you for joining us!</p>
       </div>
     </div>
 
