Add links to video recordings (#351)
Co-authored-by: Matt Mayer <matt@matthewmayer.co.uk>
Co-authored-by: Olivier Robert <olivierobert@gmail.com>

--- a/frontend/stylesheets/components/_card-talk.scss
+++ b/frontend/stylesheets/components/_card-talk.scss
@@ -39,6 +39,11 @@
     padding-left: 0.5rem;
   }
 
+  &__cancellation {
+    margin-top: 1rem;
+    font-size: smaller;
+  }
+
   &__social {
     &-icon.icon {
       width: calc(2rem * 0.65);
@@ -56,5 +61,5 @@
   // For dual speaker talks
   & + & {
     margin-top: 0.5rem;
- }
+  }
 }
